--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -55,3 +55,18 @@
     font-weight: 300;
     font-size: 10px;
 }
+
+@media screen and (max-width: 1024px) {
+    .header {
+        height: 68vh;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .header {
+        height: 100vh;
+    }
+    .header_socials, .scroll_down {
+        display: none;
+    }
+}
