--- a/src/Components/Nav/nav.css
+++ b/src/Components/Nav/nav.css
@@ -4,4 +4,29 @@ nav {
     display: block;
     padding: 11px 27px;
     position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 32px;
+    display: flex;
+    gap: 13px;
+    border-radius: 40px;
+    backdrop-filter: blur(15px);
+}
+
+nav a {
+    background: transparent;
+    padding: 13px;
+    border-radius: 50%;
+    display: flex;
+    color: var(--color-light);
+    font-size: 20px;
+}
+
+nav a:hover {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+nav a.active {
+    background: var(--color-bg);
+    color: var(--color-white);
 }
