--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -1,25 +1,71 @@
 .about__container {
-    display: grid;
-    grid-template-columns: 35% 50%;
-    gap: 15%;
+  display: grid;
+  grid-template-columns: 35% 50%;
+  gap: 15%;
 }
 
 .about__me {
-    width: 100%;
-    aspect-ratio: 1/1;
-    border-radius: 32px;
-    background: linear-gradient(45deg, transparent, var(--color-primary), transparent);
-    display: grid;
-    place-items: center;
+  width: 100%;
+  aspect-ratio: 1/1;
+  border-radius: 32px;
+  background: linear-gradient(
+    45deg,
+    transparent,
+    var(--color-primary),
+    transparent
+  );
+  display: grid;
+  place-items: center;
 }
 
 .about__me-image {
-    border-radius: 32px;
-    overflow: hidden;
-    transform: rotate(10deg);
-    transition: var(--transition);
+  border-radius: 32px;
+  overflow: hidden;
+  transform: rotate(10deg);
+  transition: var(--transition);
 }
 
 .about__me-image:hover {
-    transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+
+.about__cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+}
+
+.about__card {
+  background: var(--color-bg-variant);
+  border: 1px solid transparent;
+  border-radius: 16px;
+  padding: 32px;
+  text-align: center;
+  transition: var(--transition);
+}
+
+.about__card:hover {
+  background: transparent;
+  border-color: var(--color-primary-variant);
+  cursor: default;
+}
+
+.about__icon {
+  color: var(--color-primary);
+  font-size: 22px;
+  margin-bottom: 16px;
+}
+
+.about__card h5 {
+  font-size: 14px;
+}
+
+.about__card small {
+  font-size: 12px;
+  color: var(--color-light);
+}
+
+.about__content p {
+  margin: 32px 0 36px;
+  color: var(--color-light);
 }
