--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -31,7 +31,7 @@
 
 .about__cards {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
@@ -68,4 +68,43 @@
 .about__content p {
   margin: 32px 0 36px;
   color: var(--color-light);
+}
+
+@media screen and (max-width: 1024px) {
+  .about__container {
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  .about__cards {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .about__me {
+    width: 50%;
+    margin: 32px auto 48px;
+  }
+
+  .about__content p {
+    margin: 16px 0 22px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about__cards {
+    grid-template-columns: 1fr;
+    gap: 16px;
+  }
+  .about__me {
+    width: 65%;
+    margin: 0 auto 60px;
+  }
+
+  .about__content {
+    text-align: center;
+  }
+
+  .about__content p {
+    margin: 22px 0;
+  }
 }
