Small style updates

--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -15,6 +15,7 @@ footer a {
     font-weight: 500;
     margin-bottom: 32px;
     display: inline-block;
+    text-decoration: none;
 }
 
 .permalinks {
